link de la busqueda a la planta

--- a/www/views/app/buscarEspecimen.html
+++ b/www/views/app/buscarEspecimen.html
@@ -29,7 +29,7 @@
                 {{resultado.descripcion}}...
                 <div class="card-footer text-right">
                     <div class="pull-left">
-                      <button class="button button-small" ng-click="">
+                      <button class="button button-small" ng-click="ver('{{resultado.idPlanta}}')">
                         Ver
                       </button>
                     </div>
