--- a/www/views/app/establecimientoscerca.html
+++ b/www/views/app/establecimientoscerca.html
@@ -33,7 +33,7 @@
           </ion-pane>
         </div>
       </div>
-      <div id="map"></div>
+      <div id="mapflora"></div>
       <!--<map center="{{center_position.lat}},{{center_position.lng}}" disableDefaultUI="true" zoom="11">
       </map>-->
       <div class="row center-map-action">
