mapa con un marcador

--- a/www/views/app/vistaEspecimen.html
+++ b/www/views/app/vistaEspecimen.html
@@ -57,8 +57,8 @@
                 Ubicación
               </div>
             <div class="mapWrap-establecimiento"  data-tap-disabled="true">
-              <map center="{{center_position.lat}},{{center_position.lng}}" zoom="11">
-              </map>
+              <div id="map" data-tap-disabled="true"></div>
+
               <div class="marcador-centro">
                   <img class="img-marcador" ng-src="img/marcador.jpg" ng-model="imagenavatar">
               </div>
