Mapa con varios marcadores

--- a/www/views/app/vistaEspecimen.html
+++ b/www/views/app/vistaEspecimen.html
@@ -49,7 +49,7 @@
             </ion-slide-box>
         </md-tab>
         <md-tab label="Ubicacion">
-          <li class="li-cont-mapa">
+          <li class="li-cont-mapa-flora">
             <div class="list-info-icon" style="height: 100%; width: 35px; float: left; font-size: 22px; padding: 5px;">
               <i class="icon ion-android-pin"></i>
             </div>
@@ -58,17 +58,6 @@
               </div>
             <div class="mapWrap-establecimiento"  data-tap-disabled="true">
               <div id="map" data-tap-disabled="true"></div>
-
-              <div class="marcador-centro">
-                  <img class="img-marcador" ng-src="img/marcador.jpg" ng-model="imagenavatar">
-              </div>
-              <div class="row center-map-action">
-                <div class="list">
-                  <div class="item item-input-inset">
-                    <a class="button button-icon icon ion-pinpoint" ng-click="centerOnMe()"></a>
-                  </div>
-                </div>
-              </div>
             </div>
           </li>
         </md-tab>
