--- a/www/views/app/vistaEspecimen.html
+++ b/www/views/app/vistaEspecimen.html
@@ -48,7 +48,7 @@
               </ion-slide>
             </ion-slide-box>
         </md-tab>
-        <md-tab label="Ubicacion">
+        <md-tab label="Ubicacion" ng-if="resultado.datos.ubicaciones != null">
           <li class="li-cont-mapa-flora">
             <div class="list-info-icon" style="height: 100%; width: 35px; float: left; font-size: 22px; padding: 5px;">
               <i class="icon ion-android-pin"></i>
