arreglo texto buscador

--- a/www/views/app/buscarEspecimen.html
+++ b/www/views/app/buscarEspecimen.html
@@ -13,7 +13,7 @@
     <div class="item item-input-inset" ng-controller="buscarEspecimenCtrl">
       <p>Ingrese el nombre de la planta que deseas buscar</p>
         <label class="item-input-wrapper">
-          <input type="text" placeholder="Buscar profesional..." ng-model="parametro.busqueda">
+          <input type="text" placeholder="Buscar planta... " ng-model="parametro.busqueda">
         </label>
         <button class="button button-small" ng-click="ir()">
           Buscar
