arreglo error en galeria

--- a/www/views/app/vistaEspecimen.html
+++ b/www/views/app/vistaEspecimen.html
@@ -47,6 +47,9 @@
                 <div>&nbsp;</div>
               </ion-slide>
             </ion-slide-box>
+          </div>
+        </md-tab>
+        <md-tab label="prueba">
         </md-tab>
         <md-tab label="Ubicacion" ng-if="resultado.datos.ubicaciones != null">
           <li class="li-cont-mapa-flora">
